--- a/apps/ios/SimpleX Localizations/hu.xcloc/Localized Contents/hu.xliff
+++ b/apps/ios/SimpleX Localizations/hu.xcloc/Localized Contents/hu.xliff
@@ -272,7 +272,7 @@
       </trans-unit>
       <trans-unit id="%lldd" xml:space="preserve">
         <source>%lldd</source>
-        <target>%lldn</target>
+        <target>%lldnap</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="%lldh" xml:space="preserve">
@@ -292,7 +292,7 @@
       </trans-unit>
       <trans-unit id="%lldmth" xml:space="preserve">
         <source>%lldmth</source>
-        <target>%lldh</target>
+        <target>%lldhónap</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="%llds" xml:space="preserve">
@@ -1199,17 +1199,17 @@ swipe action</note>
       </trans-unit>
       <trans-unit id="Bad desktop address" xml:space="preserve">
         <source>Bad desktop address</source>
-        <target>Érvénytelen számítógépcím</target>
+        <target>Hibás a számítógép címe</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Bad message ID" xml:space="preserve">
         <source>Bad message ID</source>
-        <target>Téves üzenet ID</target>
+        <target>Hibás az üzenet azonosítója</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Bad message hash" xml:space="preserve">
         <source>Bad message hash</source>
-        <target>Érvénytelen az üzenet kivonata</target>
+        <target>Hibás az üzenet kivonata</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Better calls" xml:space="preserve">
@@ -1239,7 +1239,7 @@ swipe action</note>
       </trans-unit>
       <trans-unit id="Better networking" xml:space="preserve">
         <source>Better networking</source>
-        <target>Jobb hálózatkezelés</target>
+        <target>Továbbfejlesztett hálózatkezelés</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Better notifications" xml:space="preserve">
@@ -2267,7 +2267,7 @@ Ez a saját egyszer használható meghívója!</target>
       </trans-unit>
       <trans-unit id="Current conditions text couldn't be loaded, you can review conditions via this link:" xml:space="preserve">
         <source>Current conditions text couldn't be loaded, you can review conditions via this link:</source>
-        <target>A jelenlegi feltételek szövegét nem lehetett betölteni, a feltételeket a következő hivatkozáson keresztül vizsgálhatja felül:</target>
+        <target>A jelenlegi feltételek szövegét nem sikerült betölteni, a feltételeket a következő hivatkozáson keresztül vizsgálhatja felül:</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Current passphrase…" xml:space="preserve">
@@ -2771,7 +2771,7 @@ swipe action</note>
       </trans-unit>
       <trans-unit id="Different names, avatars and transport isolation." xml:space="preserve">
         <source>Different names, avatars and transport isolation.</source>
-        <target>Különböző nevek, profilképek és átvitelizoláció.</target>
+        <target>Különböző nevek, profilképek és átvitelelkülönítés.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Direct messages" xml:space="preserve">
@@ -3457,7 +3457,7 @@ chat item action</note>
       </trans-unit>
       <trans-unit id="Error opening group" xml:space="preserve">
         <source>Error opening group</source>
-        <target>Hiba a csoport előkészítésekor</target>
+        <target>Hiba történt a csoport megnyitásakor</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Error receiving file" xml:space="preserve">
@@ -3843,7 +3843,7 @@ snd error text</note>
       </trans-unit>
       <trans-unit id="Files and media not allowed" xml:space="preserve">
         <source>Files and media not allowed</source>
-        <target>A fájlok és a médiatartalmak nincsenek engedélyezve</target>
+        <target>A fájlok és a médiatartalmak küldése nincs engedélyezve</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Files and media prohibited!" xml:space="preserve">
@@ -4362,7 +4362,7 @@ Hiba: %2$@</target>
       </trans-unit>
       <trans-unit id="Import failed" xml:space="preserve">
         <source>Import failed</source>
-        <target>Sikertelen importálás</target>
+        <target>Nem sikerült az importálás</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Import theme" xml:space="preserve">
@@ -4389,12 +4389,12 @@ További fejlesztések hamarosan!</target>
       </trans-unit>
       <trans-unit id="Improved privacy and security" xml:space="preserve">
         <source>Improved privacy and security</source>
-        <target>Fejlesztett adatvédelem és biztonság</target>
+        <target>Továbbfejlesztett adatvédelem és biztonság</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Improved server configuration" xml:space="preserve">
         <source>Improved server configuration</source>
-        <target>Javított kiszolgáló konfiguráció</target>
+        <target>Továbbfejlesztett kiszolgálókonfiguráció</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="In order to continue, chat should be stopped." xml:space="preserve">
@@ -4672,7 +4672,7 @@ További fejlesztések hamarosan!</target>
       </trans-unit>
       <trans-unit id="Join as %@" xml:space="preserve">
         <source>Join as %@</source>
-        <target>csatlakozás mint %@</target>
+        <target>Csatlakozás mint: %@</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Join group" xml:space="preserve">
@@ -5574,7 +5574,7 @@ Ez a saját hivatkozása a(z) %@ nevű csoporthoz!</target>
       </trans-unit>
       <trans-unit id="No servers to send files." xml:space="preserve">
         <source>No servers to send files.</source>
-        <target>Nincsenek fájlküldő-kiszolgálók.</target>
+        <target>Nincsenek fájlküldési kiszolgálók.</target>
         <note>servers error</note>
       </trans-unit>
       <trans-unit id="No token!" xml:space="preserve">
@@ -5784,7 +5784,7 @@ VPN engedélyezése szükséges.</target>
       </trans-unit>
       <trans-unit id="Only your contact can send files and media." xml:space="preserve">
         <source>Only your contact can send files and media.</source>
-        <target>Csak a partnere küldhet fájlokat és a médiatartalmakat.</target>
+        <target>Csak a partnere küldhet fájlokat és médiatartalmakat.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Only your contact can send voice messages." xml:space="preserve">
@@ -7536,7 +7536,7 @@ chat item action</note>
       </trans-unit>
       <trans-unit id="Share old link" xml:space="preserve">
         <source>Share old link</source>
-        <target>Teljes hivatkozás megosztása</target>
+        <target>Régi (hosszú) hivatkozás megosztása</target>
         <note>alert button</note>
       </trans-unit>
       <trans-unit id="Share profile" xml:space="preserve">
@@ -8595,7 +8595,7 @@ A kapcsolódáshoz kérje meg a partnerét, hogy hozzon létre egy másik kapcso
       </trans-unit>
       <trans-unit id="Unlink" xml:space="preserve">
         <source>Unlink</source>
-        <target>Szétkapcsolás</target>
+        <target>Leválasztás</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Unlink desktop?" xml:space="preserve">
@@ -8755,7 +8755,7 @@ A kapcsolódáshoz kérje meg a partnerét, hogy hozzon létre egy másik kapcso
       </trans-unit>
       <trans-unit id="Use TCP port 443 for preset servers only." xml:space="preserve">
         <source>Use TCP port 443 for preset servers only.</source>
-        <target>A 443-as TCP-port használata kizárólag az előre beállított kiszolgálokhoz.</target>
+        <target>A 443-as TCP-port használata kizárólag az előre beállított kiszolgálókhoz.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Use chat" xml:space="preserve">
@@ -8815,7 +8815,7 @@ A kapcsolódáshoz kérje meg a partnerét, hogy hozzon létre egy másik kapcso
       </trans-unit>
       <trans-unit id="Use private routing with unknown servers." xml:space="preserve">
         <source>Use private routing with unknown servers.</source>
-        <target>Privát útválasztás használata ismeretlen kiszolgálókkal.</target>
+        <target>Privát útválasztás használata az ismeretlen kiszolgálókhoz.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Use server" xml:space="preserve">
@@ -9317,7 +9317,7 @@ Megismétli a csatlakozási kérést?</target>
       </trans-unit>
       <trans-unit id="You can't send messages!" xml:space="preserve">
         <source>You can't send messages!</source>
-        <target>Nem lehet üzeneteket küldeni!</target>
+        <target>Ön nem tud üzeneteket küldeni!</target>
         <note>alert title</note>
       </trans-unit>
       <trans-unit id="You could not be verified; please try again." xml:space="preserve">
@@ -9529,7 +9529,7 @@ Megismétli a kapcsolódási kérést?</target>
       </trans-unit>
       <trans-unit id="Your credentials may be sent unencrypted." xml:space="preserve">
         <source>Your credentials may be sent unencrypted.</source>
-        <target>A hitelesítési adati titkosítatlanul is elküldhetők.</target>
+        <target>A hitelesítési adatai titkosítatlanul is elküldhetők.</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Your current chat database will be DELETED and REPLACED with the imported one." xml:space="preserve">
@@ -9559,7 +9559,7 @@ Megismétli a kapcsolódási kérést?</target>
       </trans-unit>
       <trans-unit id="Your profile" xml:space="preserve">
         <source>Your profile</source>
-        <target>Profil</target>
+        <target>Saját profil</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Your profile **%@** will be shared." xml:space="preserve">
@@ -10523,7 +10523,7 @@ utoljára fogadott üzenet: %2$@</target>
       </trans-unit>
       <trans-unit id="unknown servers" xml:space="preserve">
         <source>unknown servers</source>
-        <target>ismeretlen átjátszók</target>
+        <target>ismeretlen kiszolgálók</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="unknown status" xml:space="preserve">
